# docusketch-pdf-generator

./: .gitignore  README.md  app.py  constants.py  pyproject.toml
core/: __init__.py  generator.py  pdf_renderer.py  template_engine.py
data/samples/: table_data.csv  wall_data.json
dev_tools/: debug_normals.py  test_visibility.py
docs/: ALGORITHM_SOLUTION.md
generators/: __init__.py  floor_plan.py  visibility.py
models/: __init__.py  document.py  primitives.py  table.py
page_types/: __init__.py  base.py  registry.py  windows_doors.py
pages/: __init__.py  base.py  registry.py  windows_doors.py
renderers/: __init__.py  base.py  image.py  svg.py  table.py
scripts/: visualize_walls.py
styles/: _layout.scss  _print.scss  _variables.scss  main.scss
templates/: base.html  base_minimal.html
templates/pages/: windows_doors.html
tests/: __init__.py  test_floor_plan.py  test_pages.py  test_renderers.py  test_visibility.py
utils/: __init__.py  encoding.py  geometry.py  scss.py
